# creditcoin-payout

./: .env.example  .gitignore  README.md  README_KO.md  creditcoin-payout-design.md  pyproject.toml
config/: config.yaml
deploy/: crontab.example
src/creditcoin_payout/: __init__.py  balance_checker.py  chain_client.py  key_manager.py  main.py  notifier.py  payout_executor.py  validator_checker.py
tests/: test_balance_checker.py  test_payout_executor.py  test_validator_checker.py
